# backend/openapi.json
@@ -1777,6 +1777,14 @@
             }
           },
           {
+            "name": "groupKey",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "q",
             "in": "query",
             "required": false,
